--- a/fly.toml
+++ b/fly.toml
@@ -1,11 +1,8 @@
 # ZÆRØ BOT - Configuração Fly.io
 app = "zaero-bot"
-primary_region = "gru"  # São Paulo, Brazil
+primary_region = "gru"
 
 [build]
-  # Build com npm install
-  [build.args]
-    NODE_VERSION = "20"
 
 [env]
   NODE_ENV = "production"
@@ -14,40 +11,18 @@ primary_region = "gru"  # São Paulo, Brazil
 [http_service]
   internal_port = 3000
   force_https = true
-  auto_stop_machines = false  # IMPORTANTE: Mantém bot sempre online
+  auto_stop_machines = false
   auto_start_machines = true
-  min_machines_running = 1    # Pelo menos 1 máquina sempre rodando
+  min_machines_running = 1
 
   [[http_service.checks]]
     interval = "30s"
-    timeout = "5s"
-    grace_period = "10s"
+    timeout = "10s"
+    grace_period = "60s"
     method = "GET"
     path = "/"
 
-[[services]]
-  protocol = "tcp"
-  internal_port = 3000
-
-  [[services.ports]]
-    port = 80
-    handlers = ["http"]
-
-  [[services.ports]]
-    port = 443
-    handlers = ["tls", "http"]
-
-  [[services.tcp_checks]]
-    interval = "30s"
-    timeout = "5s"
-    grace_period = "10s"
-
 [[vm]]
+  memory_mb = 512
   cpu_kind = "shared"
   cpus = 1
-  memory_mb = 512  # 512MB - Mínimo recomendado
-
-# Desabilita métricas para economizar recursos
-[metrics]
-  port = 9091
-  path = "/metrics"
