--- a/render.yaml
+++ b/render.yaml
@@ -9,7 +9,5 @@ services:
     envVars:
       - key: NODE_ENV
         value: production
-      - key: PORT
-        value: 3000
-    healthCheckPath: /
+    healthCheckPath: /health
     autoDeploy: true
