--- a/fly.toml
+++ b/fly.toml
@@ -1,41 +1,23 @@
-# fly.toml app configuration file generated for zaero-bot on 2026-02-11T13:14:18-04:00
+# fly.toml app configuration file generated for zaero-bot on 2026-02-11T20:34:40Z
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
 app = 'zaero-bot'
-primary_region = 'gru'
+primary_region = 'iad'
 
 [build]
-
-[deploy]
-  strategy = 'immediate'
-
-[env]
-  NODE_ENV = 'production'
-  PORT = '3000'
 
 [http_service]
   internal_port = 3000
   force_https = true
-  auto_stop_machines = 'off'
+  auto_stop_machines = 'stop'
   auto_start_machines = true
-  min_machines_running = 1
-  max_machines_running = 1
-
-  [[http_service.checks]]
-    interval = '15s'
-    timeout = '10s'
-    grace_period = '30s'
-    method = 'GET'
-    path = '/health'
+  min_machines_running = 0
+  processes = ['app']
 
 [[vm]]
-  memory = '512mb'
+  memory = '1gb'
+  cpu_kind = 'shared'
   cpus = 1
-  memory_mb = 512
-
-[mounts]
-  source = "whatsapp_sessions"
-  destination = "/app/Sessions"
-  initial_size = "1gb"
+  memory_mb = 1024
