--- a/deploy/koyeb/Dockerfile.koyeb
+++ b/deploy/koyeb/Dockerfile.koyeb
@@ -3,12 +3,27 @@ FROM node:22-bookworm-slim
 WORKDIR /app
 
 # Required for npm dependencies installed directly from GitHub repos.
+# Force all GitHub git URLs to HTTPS (including git+ssh shorthands).
 RUN apt-get update \
-  && apt-get install -y --no-install-recommends git \
+  && apt-get install -y --no-install-recommends ca-certificates git \
+  && git config --global url."https://github.com/".insteadOf "ssh://git@github.com/" \
+  && git config --global url."https://github.com/".insteadOf "git@github.com:" \
+  && git config --global url."https://github.com/".insteadOf "git+ssh://git@github.com/" \
+  && git config --global url."https://github.com/".insteadOf "git://github.com/" \
+  && update-ca-certificates \
   && rm -rf /var/lib/apt/lists/*
 
 COPY package*.json ./
-RUN npm install --omit=dev
+RUN GIT_CONFIG_COUNT=4 \
+  GIT_CONFIG_KEY_0=url.https://github.com/.insteadof \
+  GIT_CONFIG_VALUE_0=ssh://git@github.com/ \
+  GIT_CONFIG_KEY_1=url.https://github.com/.insteadof \
+  GIT_CONFIG_VALUE_1=git@github.com: \
+  GIT_CONFIG_KEY_2=url.https://github.com/.insteadof \
+  GIT_CONFIG_VALUE_2=git+ssh://git@github.com/ \
+  GIT_CONFIG_KEY_3=url.https://github.com/.insteadof \
+  GIT_CONFIG_VALUE_3=git://github.com/ \
+  npm install --omit=dev --no-audit --no-fund
 
 COPY . .
 
