--- a/deploy/fly/fly.toml
+++ b/deploy/fly/fly.toml
@@ -2,7 +2,7 @@ app = "zaero-bot"
 primary_region = "iad"
 
 [build]
-  dockerfile = "deploy/fly/Dockerfile.fly"
+  dockerfile = "Dockerfile.fly"
 
 [env]
   NODE_ENV = "production"
