--- a/deploy/fly/fly.toml
+++ b/deploy/fly/fly.toml
@@ -1,5 +1,5 @@
 app = "zaero-bot"
-primary_region = "iad"
+primary_region = "gru"
 
 [build]
   dockerfile = "Dockerfile.fly"
@@ -11,8 +11,8 @@ primary_region = "iad"
   internal_port = 3000
   force_https = true
   auto_start_machines = true
-  auto_stop_machines = "stop"
-  min_machines_running = 0
+  auto_stop_machines = false
+  min_machines_running = 1
   processes = ["app"]
 
 [[vm]]
