--- a/deploy/fly/fly.toml
+++ b/deploy/fly/fly.toml
@@ -6,6 +6,7 @@ primary_region = "gru"
 
 [env]
   NODE_ENV = "production"
+  SESSION_DIR = "/data/auth"
 
 [http_service]
   internal_port = 3000
@@ -13,6 +14,11 @@ primary_region = "gru"
   auto_start_machines = true
   auto_stop_machines = false
   min_machines_running = 1
+  processes = ["app"]
+
+[mounts]
+  source = "zaero_bot_data"
+  destination = "/data"
   processes = ["app"]
 
 [[vm]]
