--- a/fly.toml
+++ b/fly.toml
@@ -1,10 +1,10 @@
-# fly.toml app configuration file generated for zaero-bot on 2026-02-12T04:05:25Z
+# fly.toml app configuration file generated for zaero-bot on 2026-02-13T11:40:47Z
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
 app = 'zaero-bot'
-primary_region = 'iad'
+primary_region = 'gru'
 
 [build]
 
@@ -21,7 +21,3 @@ primary_region = 'iad'
   cpu_kind = 'shared'
   cpus = 1
   memory_mb = 1024
-
-[mounts]
-  source = "zaero_bot_data"
-  destination = "/data"
