--- a/deploy/fly/Dockerfile.fly
+++ b/deploy/fly/Dockerfile.fly
@@ -2,9 +2,9 @@ FROM node:22-bookworm-slim
 
 WORKDIR /app
 
-# Required for npm dependencies installed directly from GitHub repos.
+# Dependencias de sistema: git para pacotes GitHub e ffmpeg para transcode
 RUN apt-get update \
-  && apt-get install -y --no-install-recommends ca-certificates git \
+  && apt-get install -y --no-install-recommends ca-certificates git ffmpeg \
   && git config --global url."https://github.com/".insteadOf "ssh://git@github.com/" \
   && git config --global url."https://github.com/".insteadOf "git@github.com:" \
   && update-ca-certificates \
@@ -23,7 +23,11 @@ COPY . .
 RUN mkdir -p Sessions/Owner
 
 ENV NODE_ENV=production
+ENV NODE_OPTIONS="--max-old-space-size=768 --expose-gc"
 
 EXPOSE 3000
+
+HEALTHCHECK --interval=30s --timeout=5s --start-period=30s --retries=3 \
+  CMD node healthcheck.js || exit 1
 
 CMD ["node", "index.js"]
