--- a/deploy/fly/fly.toml
+++ b/deploy/fly/fly.toml
@@ -7,6 +7,14 @@ primary_region = "gru"
 [env]
   NODE_ENV = "production"
   SESSION_DIR = "/data/auth"
+  TZ = "America/Sao_Paulo"
+  NODE_OPTIONS = "--max-old-space-size=768 --expose-gc"
+  BOT_QUEUE_MAX_CONCURRENT = "4"
+  BOT_HEAVY_CONCURRENCY = "1"
+  BOT_CHAT_QUEUE_MAX_PENDING = "40"
+  BOT_QUEUE_MAX_PENDING = "1200"
+  BOT_HEALTH_RSS_LIMIT_MB = "900"
+  BOT_HEALTH_QUEUE_LIMIT = "5000"
 
 [http_service]
   internal_port = 3000
@@ -15,6 +23,13 @@ primary_region = "gru"
   auto_stop_machines = false
   min_machines_running = 1
   processes = ["app"]
+
+  [[http_service.checks]]
+    grace_period = "30s"
+    interval = "30s"
+    method = "get"
+    timeout = "5s"
+    path = "/health"
 
 [mounts]
   source = "zaero_bot_data"
