--- a/fly.toml
+++ b/fly.toml
@@ -8,13 +8,31 @@ primary_region = 'gru'
 
 [build]
 
+[env]
+  NODE_ENV = 'production'
+  TZ = 'America/Sao_Paulo'
+  NODE_OPTIONS = '--max-old-space-size=768 --expose-gc'
+  BOT_QUEUE_MAX_CONCURRENT = '4'
+  BOT_HEAVY_CONCURRENCY = '1'
+  BOT_CHAT_QUEUE_MAX_PENDING = '40'
+  BOT_QUEUE_MAX_PENDING = '1200'
+  BOT_HEALTH_RSS_LIMIT_MB = '900'
+  BOT_HEALTH_QUEUE_LIMIT = '5000'
+
 [http_service]
   internal_port = 3000
   force_https = true
-  auto_stop_machines = 'stop'
+  auto_stop_machines = 'off'
   auto_start_machines = true
-  min_machines_running = 0
+  min_machines_running = 1
   processes = ['app']
+
+  [[http_service.checks]]
+    grace_period = '30s'
+    interval = '30s'
+    method = 'get'
+    timeout = '5s'
+    path = '/health'
 
 [[vm]]
   memory = '1gb'
