--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,7 @@ PINTEREST_EMAIL=
 PINTEREST_PASSWORD=
 PINTEREST_REQUIRE_AUTH=0
 
+# Tenor/GIPHY para comando .fig (opcional no GIPHY)
+TENOR_API_KEY=
+TENOR_CLIENT_KEY=zaero-bot
+GIPHY_API_KEY=
