--- a/.env.example
+++ b/.env.example
@@ -26,3 +26,12 @@ PINTEREST_REQUIRE_AUTH=0
 TENOR_API_KEY=
 TENOR_CLIENT_KEY=zaero-bot
 GIPHY_API_KEY=
+
+# RedGifs (opcional)
+# Filtro de seguranca para bloquear termos sensiveis.
+REDGIFS_SAFETY_FILTER=1
+REDGIFS_DEFAULT_SAFETY_FILTER=1
+
+# Termos extras para bloquear (separados por virgula, ponto e virgula, barra vertical ou quebra de linha)
+# Exemplo: REDGIFS_SAFETY_EXCLUDED_TERMS=gore,scat,vomit,incest,rape
+REDGIFS_SAFETY_EXCLUDED_TERMS=
